# aptos_tc_example

./: Cargo.toml
contract/: Move.toml
contract/sources/: example.move
src/: main.rs  test.rs
