[package]
name = "aptos_tc_example"
version = "0.1.0"
edition = "2021"

[dependencies]
aptos-testcontainer = { version = "0.1.2" }
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet" }

tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
lazy_static = "1.5.0"
serde_json = "1.0.128"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/Tranduy1dol/x25519-dalek", branch = "zeroize_v1.7" }